# Exam-in-Mind

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  config.yaml  index.html  pyproject.toml
Preparation_Files/: Git版本管理规则追加.txt  Phase 8启动.txt
ap_calculus_bc/: 404.html  index.html
ap_calculus_bc/01-limits-and-continuity/: index.html
ap_calculus_bc/02-differentiation-definition-and-fundamental-properties/: index.html
ap_calculus_bc/03-differentiation-composite-implicit-and-inverse-functions/: index.html
ap_calculus_bc/04-contextual-applications-of-differentiation/: index.html
ap_calculus_bc/05-analytical-applications-of-differentiation/: index.html
ap_calculus_bc/06-integration-and-accumulation-of-change/: index.html
ap_calculus_bc/07-differential-equations/: index.html
ap_calculus_bc/08-applications-of-integration/: index.html
ap_calculus_bc/10-infinite-sequences-and-series/: index.html
archive/: CLAUDE.md 草稿.txt  SPEC.v1.0-original.md  devlog-TEMPLATE.phase.md  指导文档重构.txt  操作手册(8 步).txt  日志功能追加.txt  日志升级&版本号追加.txt  项目大纲Q&A.txt
devlog/: README.md  VERSION_LOG_TEMPLATE.md  phase-1-scaffolding.md  phase-2-brave-search.md  phase-3-models-cache.md  phase-4-outline-builder.md  phase-5-tree-builder.md  phase-6-content-builder.md  phase-7-renderers.md  phase-8-integration.md  v1.0.0-retrospective.md
exam_in_mind/: __init__.py  __main__.py  brave_search.py  cache.py  config.py  llm_client.py  main.py  models.py  prompts.py  tools.py
sat_math/: 404.html  index.html
tests/: test_brave_search.py  test_cache.py  test_models.py
(+636 files in other folders)
